syntax = "proto3";

package event;
option go_package = ".;grpcserver";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

message Event {
  int32 id = 1;
  string title = 2;
  google.protobuf.Timestamp date_time_start = 3;
  google.protobuf.Timestamp date_time_end = 4;
  string description = 5;
  int32 user_id = 6;
  google.protobuf.Duration notification_duration = 7;
}

message DeleteRequest {
  int32 id = 1;
}

message ListRequest {
  optional string period_type = 1;
}

message ListResult {
  repeated Event events = 1;
}

service Calendar {
  rpc CreateEvent (Event) returns (Event) {
  }
  rpc UpdateEvent (Event) returns (Event) {
  }
  rpc DeleteEvent (DeleteRequest) returns (google.protobuf.Empty) {
  }
  rpc DeleteOldEvents (google.protobuf.Empty) returns (google.protobuf.Empty) {
  }
  rpc EventList (ListRequest) returns (ListResult) {
  }
}
